--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -47,12 +47,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/img"
+        android:background="@drawable/maps"
 
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/searchbox"
+        android:id="@+id/searchbox2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
@@ -84,7 +84,7 @@
             android:id="@+id/bookmark_shimmer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchbox"
+            app:layout_constraintTop_toBottomOf="@+id/searchbox2"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,7 @@
         android:id="@+id/bookmark_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/searchbox"
+        app:layout_constraintTop_toBottomOf="@+id/searchbox2"
         android:layout_marginTop="20dp"
         tools:ignore="MissingConstraints"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,6 +105,20 @@
         android:layout_marginLeft="20dp"
         />
 
+        <TextView
+            android:id="@+id/error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="600dp"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            tools:ignore="MissingConstraints" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </ScrollView>
