--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -59,6 +59,7 @@
                         android:textStyle="bold" />
 
                     <EditText
+                        android:id="@+id/search_Bar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/title"
@@ -191,7 +192,7 @@
                 <RelativeLayout
                     android:background="@color/white"
                     android:layout_width="match_parent"
-                    android:layout_height="600dp"
+                    android:layout_height="700dp"
                     android:layout_below="@id/relativeLayout"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
@@ -251,10 +252,10 @@
                         />
 
 
-
-
                 </RelativeLayout>
             </RelativeLayout>
     </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
