--- a/app/src/main/res/layout/fragment_recent_tasks.xml
+++ b/app/src/main/res/layout/fragment_recent_tasks.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#F5F5F5"
     tools:context=".DashBoard.DashBoard.AdminDashBoard.Tasks.RecentTasks">
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="350dp"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
