--- a/app/src/main/res/layout/item_recent_properties.xml
+++ b/app/src/main/res/layout/item_recent_properties.xml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    android:layout_marginTop="7dp"
+    app:cardCornerRadius="10dp"
     android:padding="10dp">
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="25dp"
-        app:cardCornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -46,6 +39,7 @@
                 android:id="@+id/hotel_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingRight="5dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:layout_toEndOf="@+id/hotel_profile"
@@ -96,7 +90,10 @@
                 android:layout_marginBottom="5dp"
                 android:src="@drawable/greview"
                 app:layout_constraintStart_toEndOf="@id/hotel_profile"
-                app:layout_constraintTop_toBottomOf="@id/hotel_google_review" />
+                app:layout_constraintTop_toBottomOf="@id/hotel_google_review"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                />
 
             <TextView
                 android:id="@+id/greview_review_text"
@@ -113,19 +110,21 @@
                 android:id="@+id/ratingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="132dp"
+                android:layout_marginTop="5dp"
                 android:numStars="5"
                 android:progressBackgroundTint="#a8a8a8"
-                android:progressTint="#06CD0E"
+                android:progressTint="#FBBC05"
                 android:rating="2.5"
                 android:scaleX="0.35"
                 android:scaleY="0.35"
                 android:stepSize="0.1"
                 android:visibility="visible"
+                android:layout_marginRight="-70dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/hotel_cover" />
+                app:layout_constraintTop_toBottomOf="@+id/hotel_cover"
+                app:layout_constraintVertical_bias="0.176" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
