--- a/app/src/main/res/layout/recentcard.xml
+++ b/app/src/main/res/layout/recentcard.xml
@@ -8,7 +8,7 @@
     android:layout_alignParentStart="true"
     >
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="10dp"
@@ -26,16 +26,44 @@
 
 <!--            />-->
 
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_marketing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="17dp"
+                android:layout_margin="8dp"
+                android:background="@color/sky_blue"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/marketing"
+                        android:textSize="14sp"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:padding="5dp"
+                        android:background="@color/sky_blue"/>
+            </androidx.cardview.widget.CardView>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/png_timer"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@id/card_marketing"
+                app:layout_constraintStart_toEndOf="@id/card_marketing"
+                app:layout_constraintTop_toTopOf="@id/card_marketing"
+                app:layout_constraintBottom_toBottomOf="@id/card_marketing"/>
+
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/owner_Image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
+            android:src="@drawable/png_peop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="9dp"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             app:shapeAppearanceOverlay="@style/SpecificCornerRounded" />
@@ -46,122 +74,159 @@
             android:id="@+id/Company_Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="50dp"
+            android:text="Sahpura Group"
+            android:textSize="16sp"
             android:textColor="@color/black"
-            android:textSize="18dp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/avenir"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/card_marketing"
+            android:layout_marginStart="11dp" />
 
+            <TextView
+                android:id="@+id/hotel_task"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Task Wireframe"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/Company_Name"
+                android:layout_marginStart="11dp"/>
+
+            <TextView
+                android:id="@+id/hotel_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5 Feb 2023"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/hotel_task"
+                android:layout_marginStart="12dp"/>
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@+id/fb_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/facebook"
-            android:layout_marginTop="120dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="15dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hotel_date"
             />
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@+id/ig_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/instagram"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="170dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fb_icon"
             />
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@+id/pinterest_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/pinterest"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="220dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ig_icon"
             />
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@+id/google_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/google"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="270dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pinterest_icon"
             />
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@+id/linkdin_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/linkdin"
-            android:layout_marginTop="120dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="140dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias="0.55"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hotel_date"
             />
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@+id/twitter_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/twitter"
-            android:layout_marginTop="170dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="140dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintHorizontal_bias="0.55"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linkdin_icon"
             />
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/gg"
-            android:layout_marginTop="220dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="140dp"
             android:id="@+id/ullu"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/gg"
+            android:layout_marginTop="4dp"
+            app:layout_constraintHorizontal_bias="0.55"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/twitter_icon"
             />
 
         <TextView
             android:id="@+id/facebooktask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="125dp"
-            android:layout_marginLeft="50dp"
-            android:textSize="14dp"
+            android:text="2 Post and 2 Videos"
+            android:textSize="14sp"
+            android:fontFamily="@font/avenir"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@id/fb_icon"
+            app:layout_constraintTop_toTopOf="@+id/fb_icon"
+            app:layout_constraintBottom_toBottomOf="@id/fb_icon"
             />
         <TextView
             android:id="@+id/instatask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="175dp"
-            android:layout_marginLeft="50dp"
-            android:textSize="14dp"
+            android:text="2 Post and 2 Videos"
+            android:textSize="14sp"
+            android:fontFamily="@font/avenir"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@id/ig_icon"
+            app:layout_constraintTop_toTopOf="@+id/ig_icon"
+            app:layout_constraintBottom_toBottomOf="@id/ig_icon"
             />
 
         <TextView
             android:id="@+id/pinterest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="225dp"
-            android:layout_marginLeft="50dp"
-            android:textSize="14dp"
+            android:text="2 Post and 2 Videos"
+            android:textSize="14sp"
+            android:fontFamily="@font/avenir"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@id/pinterest_icon"
+            app:layout_constraintTop_toTopOf="@+id/pinterest_icon"
+            app:layout_constraintBottom_toBottomOf="@id/pinterest_icon"
             />
 
         <TextView
             android:id="@+id/google"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="275dp"
-            android:layout_marginLeft="50dp"
-            android:textSize="14dp"
+            android:text="2 Post and 2 Videos"
+            android:textSize="14sp"
+            android:fontFamily="@font/avenir"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@id/google_icon"
+            app:layout_constraintTop_toTopOf="@+id/google_icon"
+            app:layout_constraintBottom_toBottomOf="@id/google_icon"
             />
 
 
@@ -169,36 +234,40 @@
             android:id="@+id/linkdin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="125dp"
-            android:textSize="14dp"
+            android:text="2 Post and 2 Videos"
+            android:textSize="14sp"
+            android:fontFamily="@font/avenir"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@id/linkdin_icon"
+            app:layout_constraintTop_toTopOf="@+id/linkdin_icon"
+            app:layout_constraintBottom_toBottomOf="@id/linkdin_icon"
             />
         <TextView
             android:id="@+id/twitter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="175dp"
-            android:layout_marginLeft="70dp"
-            android:textSize="14dp"
+            android:text="2 Post and 2 Videos"
+            android:textSize="14sp"
+            android:fontFamily="@font/avenir"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@id/twitter_icon"
+            app:layout_constraintTop_toTopOf="@+id/twitter_icon"
+            app:layout_constraintBottom_toBottomOf="@id/twitter_icon"
             />
 
             <TextView
                 android:id="@+id/gg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="-130dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="225dp"
-                android:layout_toEndOf="@+id/ullu"
-                android:textSize="14dp" />
+                android:text="2 Post and 2 Videos"
+                android:textSize="14sp"
+                android:fontFamily="@font/avenir"
+                android:layout_marginStart="5dp"
+                app:layout_constraintStart_toEndOf="@id/ullu"
+                app:layout_constraintTop_toTopOf="@+id/ullu"
+                app:layout_constraintBottom_toBottomOf="@id/ullu"/>
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.cardview.widget.CardView>
