--- a/app/src/main/res/layout/activity_login_phone.xml
+++ b/app/src/main/res/layout/activity_login_phone.xml
@@ -47,6 +47,7 @@
         android:layout_height="wrap_content"
         android:text="@string/phone_context"
         android:textSize="17sp"
+        android:fontFamily="@font/avenir"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         android:gravity="center"
@@ -118,6 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Send OTP"
+                android:fontFamily="@font/avenir"
                 android:textSize="15sp"
                 android:textColor="@color/black"
                 android:gravity="center_horizontal"
