--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -22,7 +22,7 @@
         android:text="Forgot Password"
         android:textSize="34sp"
         android:textColor="@color/black"
-        android:fontFamily="@font/arvo"
+        android:fontFamily="@font/avenir"
         android:textStyle="bold"
         android:layout_margin="35dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:text="@string/forgot_context"
         android:layout_margin="45dp"
+        android:fontFamily="@font/avenir"
         app:layout_constraintTop_toBottomOf="@id/f_text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -94,6 +95,7 @@
                 android:layout_marginHorizontal="5dp"
                 android:gravity="center_horizontal"
                 android:text="@string/log_in"
+                android:fontFamily="@font/avenir"
                 android:textSize="15sp"
                 android:textColor="@color/white" />
 
