--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:text="@string/hi_welcome"
         android:textSize="34sp"
+        android:fontFamily="@font/avenir"
         android:textColor="@color/black"
 
         android:textStyle="bold"
@@ -91,6 +92,7 @@
         android:layout_height="wrap_content"
         android:text="@string/forgot_your_password"
         android:textSize="17sp"
+        android:fontFamily="@font/avenir"
         android:textColor="#FF2D55"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_password_layout"
@@ -122,6 +124,7 @@
                 android:gravity="center_horizontal"
                 android:text="@string/log_in"
                 android:textSize="15sp"
+                android:fontFamily="@font/avenir"
                 android:textColor="@color/white" />
 
         </LinearLayout>
