--- a/app/src/main/res/layout/activity_phone_verification.xml
+++ b/app/src/main/res/layout/activity_phone_verification.xml
@@ -15,9 +15,9 @@
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
-        android:fontFamily="@font/arvo"
+        android:fontFamily="@font/avenir"
         app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintVertical_bias="0.16"
+        app:layout_constraintVertical_bias="0.13"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
         android:layout_marginStart="5dp"
         android:text="Your Phone Number"
         android:textColor="@color/white"
-        android:fontFamily="@font/arvo"
+        android:fontFamily="@font/avenir"
         android:textSize="17sp"
         app:layout_constraintTop_toBottomOf="@id/phone_verification"
         app:layout_constraintStart_toStartOf="@id/phone_verification"/>
@@ -40,8 +40,9 @@
         android:id="@+id/number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
+        android:layout_marginTop="5dp"
         android:text="+91 9452059368"
+        android:fontFamily="@font/avenir"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/your_no"
@@ -52,6 +53,7 @@
         android:layout_height="wrap_content"
         android:text="@string/enter_the"
         android:textColor="@color/black"
+        android:fontFamily="@font/avenir"
         android:textSize="17sp"
         android:layout_marginTop="70dp"
         app:layout_constraintTop_toBottomOf="@id/number"
@@ -63,6 +65,7 @@
         android:layout_height="wrap_content"
         android:text="@string/i_have_a_problem"
         android:textSize="17sp"
+        android:fontFamily="@font/avenir"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
